@@ -3,7 +3,7 @@ package io.github.simple4tests.webdriver.providers;
 import net.thucydides.core.webdriver.DriverSource;
 import org.openqa.selenium.WebDriver;
 
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Paths;
 
 public class SerenityDriver implements DriverSource {
@@ -28,7 +28,7 @@ public class SerenityDriver implements DriverSource {
             try {
                 return WebDriverProvider.get(
                         System.getProperty("s4t.browser"),
-                        new URL(System.getProperty("s4t.gridUrl")),
+                        new URI(System.getProperty("s4t.gridUrl")).toURL(),
                         System.getProperty("s4t.optionsAsYamlResource"));
             } catch (Exception e) {
                 System.out.println(e.getMessage());
